--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,13 @@
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0 auto;
+}
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
 
 .App-header {
@@ -24,15 +21,11 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.btn {
+  color: hsl(189deg, 86%, 68%);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+.icon {
+  font-size: 120%;
+  padding: 0.3em 0.6em 0.3em 0.3em;
+}/*# sourceMappingURL=App.css.map */
