Complete app main layout
App main components are built into their initial versions. Created
components are Toolbox, Optionbox and Workspace. Each of them is
taking another tasks and user actions:

- Toolbox is responsible for representing the action types user can
have, each type is also divided into a specific functionality, which
is described by a corresponding button;
- Optionbox is for chosen action adjustments. Currently, it does not
provide any additional utility. In the future, based on Toolbox
button pressed, it will showcase all different customization options
that user can operate with;
- Workspace is the actual project playground, where shapes can be
placed and modified.

--- a/src/App.css
+++ b/src/App.css
@@ -17,8 +17,20 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  /*     font-size: calc(10px + 2vmin); */
   color: white;
+}
+
+.App-content {
+  width: 100vw;
+  position: absolute;
+  bottom: 0%;
+  left: 0%;
+  width: 100vw;
+  height: 82vh;
+  display: grid;
+  grid-template-columns: 80% 20%;
+  grid-template-rows: 1;
 }
 
 .btn {
@@ -27,5 +39,4 @@ body {
 
 .icon {
   font-size: 120%;
-  padding: 0.3em 0.6em 0.3em 0.3em;
 }/*# sourceMappingURL=App.css.map */
