--- a/src/vars/_scss_variables.scss
+++ b/src/vars/_scss_variables.scss
@@ -1,3 +1,4 @@
 $color__primary: hsl(189, 86%, 53%);
 $color__primary--light: hsl(189, 86%, 68%);
 $color__primary--dark: hsl(189, 86%, 38%);
+$color__primary--misty: hsl(189, 86%, 18%);
