Finish an Optionbox showcase for action buttons
Optionbox now handles a showcase for each individual action button. Once
the button is clicked, a message is shown to user, which points out the
following pieces of information:

1. The full name of the clicked button;
2. A short description which explains button purpose;
3. Necessary steps, taken in order to execute button functionality;

An excessive work was also done for a styling part, which ultimately
make this option box more eye-appealing.

--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,10 @@ body {
   color: white;
 }
 
+.App-bar {
+  box-shadow: 0em 1.3em 0em 1.3em #a22;
+}
+
 .App-content {
   width: 100vw;
   position: absolute;
