--- a/src/vars/_scss_variables.scss
+++ b/src/vars/_scss_variables.scss
@@ -2,3 +2,6 @@ $color__primary: hsl(189, 86%, 53%);
 $color__primary--light: hsl(189, 86%, 68%);
 $color__primary--dark: hsl(189, 86%, 38%);
 $color__primary--misty: hsl(189, 86%, 18%);
+
+$color__secondary: #ddd;
+$color__secondary--dark: #999;
