Update app functionality
Some minor styling adjustments for Toolbox are done. Shape creating
process is under main development now.

--- a/src/components/toolbox/toolbox.css
+++ b/src/components/toolbox/toolbox.css
@@ -65,4 +65,8 @@
 .icon-tool {
   font-size: 120%;
   margin-right: 0.5em;
+}
+
+.active {
+  color: hsl(189deg, 86%, 68%);
 }/*# sourceMappingURL=toolbox.css.map */
