--- a/src/components/workspace/workspace.css
+++ b/src/components/workspace/workspace.css
@@ -10,4 +10,17 @@
   background-repeat: repeat;
   width: 100%;
   height: 100%;
+}
+
+.vertice {
+  width: 0.16em;
+  padding: 0.16em;
+  background: lightblue;
+  border-radius: 50%;
+  position: absolute;
+}
+
+.shape_preview {
+  position: absolute;
+  background: papayawhip;
 }/*# sourceMappingURL=workspace.css.map */
