--- a/src/components/workspace/workspace.scss
+++ b/src/components/workspace/workspace.scss
@@ -18,3 +18,16 @@
     width: 100%;
     height: 100%;
 }
+
+.vertice {
+    width: .16em;
+    padding: .16em;
+    background: lightblue;
+    border-radius: 50%;
+    position: absolute;
+}
+
+.shape_preview {
+    position: absolute;
+    background: papayawhip;
+}
