Finish designing process for square shape creation
The very first app functionality is ready to use ! A square shape can
be created on top of Workspace grid. Currently, only square size and
position are possible to adjust. All the remain properties are yet
not implemented.

Squares can be created on top of each too, but they cannot be grouped
inside a layout (so far, this feature has not been added).

Modified the toolbox coloring a bit. The main purpose of this change was
to remove transparency from its' background.

Workspace and also the whole app does not allow the created content to
overflow. That means, each time a shape is created, which size goes
beyond the visible screen size, the overflowing part is being cut off
permanently.

--- a/src/components/toolbox/toolbox.css
+++ b/src/components/toolbox/toolbox.css
@@ -9,8 +9,10 @@
   width: 100vw;
   padding: 0.15em;
   height: 18vh;
-  background: linear-gradient(45deg, rgba(34, 34, 34, 0.6666666667) 5%, rgba(51, 51, 51, 0.7333333333), rgba(34, 34, 34, 0.6666666667) 95%);
-  box-shadow: 0em 0.1em 0em 0.1em hsl(189deg, 86%, 18%), 0em 0.3em 0 0.3em rgba(34, 34, 34, 0.6);
+  background: linear-gradient(45deg, #222 5%, #223, #222 95%);
+  /*  box-shadow: 0em .1em 0em .1em $color__primary--misty,
+       0em .3em 0 .3em #2229; */
+  border-bottom: 0.15em solid hsl(189deg, 86%, 18%);
 }
 
 .toolbox {
