Implement shapes creating pattern
All scheduled shapes are currently possible to add to our workspae grid.
Those are: square, circle, rectangle and triangle. The Implement
mechanism has been prepared to all of them, with some details verying
based on shape type and specification. By now, all create type of
buttons are doing their tasks correctly.

--- a/src/components/optionbox/optionbox.scss
+++ b/src/components/optionbox/optionbox.scss
@@ -9,12 +9,14 @@ $text__margin--y: .6em;
 }
 
 .option-box {
-    background: linear-gradient(135deg, #1117 5%, #2228, #1117 95%);
+    background: linear-gradient(135deg, #222 5%, #223, #222 95%);
     border-width: 0em 0em 0em .1em;
     box-shadow: 0em 0em .1em .1em $color__primary--misty,
     0em 0em .3em .3em #222c;
     color: $color__primary--dark;
     font-weight: 550;
+    position: relative;
+    z-index: 15;
 }
 
 .option-box__content {
