--- a/src/components/optionbox/optionbox.css
+++ b/src/components/optionbox/optionbox.css
@@ -1,9 +1,11 @@
 .option-box {
-  background: linear-gradient(135deg, rgba(17, 17, 17, 0.4666666667) 5%, rgba(34, 34, 34, 0.5333333333), rgba(17, 17, 17, 0.4666666667) 95%);
+  background: linear-gradient(135deg, #222 5%, #223, #222 95%);
   border-width: 0em 0em 0em 0.1em;
   box-shadow: 0em 0em 0.1em 0.1em hsl(189deg, 86%, 18%), 0em 0em 0.3em 0.3em rgba(34, 34, 34, 0.8);
   color: hsl(189deg, 86%, 38%);
   font-weight: 550;
+  position: relative;
+  z-index: 15;
 }
 
 .option-box__content {
