--- a/src/components/workspace/workspace.scss
+++ b/src/components/workspace/workspace.scss
@@ -86,3 +86,8 @@
 .untargetable {
     pointer-events: none;
 }
+
+// When user clicks onto a shape, this happens
+.target_shape {
+    background: pink;
+}
