--- a/src/components/toolbox/toolbox.css
+++ b/src/components/toolbox/toolbox.css
@@ -64,6 +64,11 @@
   width: 30%;
 }
 
+.btn-blocked {
+  pointer-events: none;
+  filter: brightness(70%);
+}
+
 .icon-tool {
   font-size: 120%;
   margin-right: 0.5em;
